Fix missalignment WIP header row first and second columns by special casing the top left spacer TD element.

--- a/public/stylesheets/travel_cal.css
+++ b/public/stylesheets/travel_cal.css
@@ -149,6 +149,11 @@ table#wip a {
   font-size: x-small;
 }
 
+table#wip td.corner-spacer {
+  border-bottom: none;
+  background-color: white;
+}
+
 table#wip div {
   overflow: hidden;
 }
